# spark_delta_demo

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: entry.py
