[project]
name = "spark_delta_demo"
version = "0.1.0"
description = "lab for delta lake"
authors = [
    {name = "Salma QOLQAZI", email = "sqolqazi@gmail.com"},
]
dependencies = ["ruff>=0.12.4", "flake8>=7.3.0", "prettier>=0.0.7", "git-cliff>=2.9.1", "pre-commit>=4.2.0"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "proprietary"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
format = "prettier --write ."
changelog = "git-cliff -o CHANGELOG.md"
